--- a/cv.html
+++ b/cv.html
@@ -255,18 +255,49 @@
             <div class="section">
                 <div class="sectioncv5">
 
-                    <!-- Langages de programmation -->
+                    <!-- QA & Tests -->
                     <div class="competences-block">
-                        <h2 class="competences-subtitle">Langage de programmation</h2>
+                        <h2 class="competences-subtitle">QA & Tests</h2>
                         <div class="skills-row">
                             <div class="competencecv">
-                                <div class="skill-circle" data-percent="100">
+                                <div class="skill-circle" data-percent="95">
                                     <div class="skill-circle-inner">
-                                        <span class="skill-percent">100%</span>
+                                        <span class="skill-percent">95%</span>
                                     </div>
                                 </div>
-                                <h2 class="font-normal">HTML/CSS</h2>
+                                <h2 class="font-normal">Cypress</h2>
                             </div>
+                            <div class="competencecv">
+                                <div class="skill-circle" data-percent="90">
+                                    <div class="skill-circle-inner">
+                                        <span class="skill-percent">90%</span>
+                                    </div>
+                                </div>
+                                <h2 class="font-normal">Selenium</h2>
+                            </div>
+                            <div class="competencecv">
+                                <div class="skill-circle" data-percent="75">
+                                    <div class="skill-circle-inner">
+                                        <span class="skill-percent">75%</span>
+                                    </div>
+                                </div>
+                                <h2 class="font-normal">Allure</h2>
+                            </div>
+                            <div class="competencecv">
+                                <div class="skill-circle" data-percent="60">
+                                    <div class="skill-circle-inner">
+                                        <span class="skill-percent">60%</span>
+                                    </div>
+                                </div>
+                                <h2 class="font-normal">TestFX</h2>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- Langages de programmation -->
+                    <div class="competences-block">
+                        <h2 class="competences-subtitle">Langages</h2>
+                        <div class="skills-row">
                             <div class="competencecv">
                                 <div class="skill-circle" data-percent="100">
                                     <div class="skill-circle-inner">
@@ -300,6 +331,14 @@
                                 <h2 class="font-normal">JS</h2>
                             </div>
                             <div class="competencecv">
+                                <div class="skill-circle" data-percent="65">
+                                    <div class="skill-circle-inner">
+                                        <span class="skill-percent">65%</span>
+                                    </div>
+                                </div>
+                                <h2 class="font-normal">TypeScript</h2>
+                            </div>
+                            <div class="competencecv">
                                 <div class="skill-circle" data-percent="60">
                                     <div class="skill-circle-inner">
                                         <span class="skill-percent">60%</span>
@@ -307,13 +346,36 @@
                                 </div>
                                 <h2 class="font-normal">C</h2>
                             </div>
+                        </div>
+                    </div>
+
+                    <!-- Développement Web -->
+                    <div class="competences-block">
+                        <h2 class="competences-subtitle">Développement Web</h2>
+                        <div class="skills-row">
                             <div class="competencecv">
-                                <div class="skill-circle" data-percent="45">
+                                <div class="skill-circle" data-percent="100">
                                     <div class="skill-circle-inner">
-                                        <span class="skill-percent">45%</span>
+                                        <span class="skill-percent">100%</span>
                                     </div>
                                 </div>
-                                <h2 class="font-normal">Google Apps Script</h2>
+                                <h2 class="font-normal">HTML / CSS</h2>
+                            </div>
+                            <div class="competencecv">
+                                <div class="skill-circle" data-percent="70">
+                                    <div class="skill-circle-inner">
+                                        <span class="skill-percent">70%</span>
+                                    </div>
+                                </div>
+                                <h2 class="font-normal">XML</h2>
+                            </div>
+                            <div class="competencecv">
+                                <div class="skill-circle" data-percent="55">
+                                    <div class="skill-circle-inner">
+                                        <span class="skill-percent">55%</span>
+                                    </div>
+                                </div>
+                                <h2 class="font-normal">Angular</h2>
                             </div>
                         </div>
                     </div>
@@ -328,23 +390,15 @@
                                         <span class="skill-percent">100%</span>
                                     </div>
                                 </div>
-                                <h2 class="font-normal">Suite Google</h2>
-                            </div>
-                            <div class="competencecv">
-                                <div class="skill-circle" data-percent="100">
-                                    <div class="skill-circle-inner">
-                                        <span class="skill-percent">100%</span>
-                                    </div>
-                                </div>
-                                <h2 class="font-normal">Jet Brain</h2>
-                            </div>
-                            <div class="competencecv">
-                                <div class="skill-circle" data-percent="100">
-                                    <div class="skill-circle-inner">
-                                        <span class="skill-percent">100%</span>
-                                    </div>
-                                </div>
                                 <h2 class="font-normal">GitHub</h2>
+                            </div>
+                            <div class="competencecv">
+                                <div class="skill-circle" data-percent="100">
+                                    <div class="skill-circle-inner">
+                                        <span class="skill-percent">100%</span>
+                                    </div>
+                                </div>
+                                <h2 class="font-normal">JetBrains</h2>
                             </div>
                             <div class="competencecv">
                                 <div class="skill-circle" data-percent="95">
@@ -355,6 +409,45 @@
                                 <h2 class="font-normal">Linux</h2>
                             </div>
                             <div class="competencecv">
+                                <div class="skill-circle" data-percent="80">
+                                    <div class="skill-circle-inner">
+                                        <span class="skill-percent">80%</span>
+                                    </div>
+                                </div>
+                                <h2 class="font-normal">Jira</h2>
+                            </div>
+                            <div class="competencecv">
+                                <div class="skill-circle" data-percent="50">
+                                    <div class="skill-circle-inner">
+                                        <span class="skill-percent">50%</span>
+                                    </div>
+                                </div>
+                                <h2 class="font-normal">Docker</h2>
+                            </div>
+                            <div class="competencecv">
+                                <div class="skill-circle" data-percent="50">
+                                    <div class="skill-circle-inner">
+                                        <span class="skill-percent">50%</span>
+                                    </div>
+                                </div>
+                                <h2 class="font-normal">n8n</h2>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- Bureautique -->
+                    <div class="competences-block">
+                        <h2 class="competences-subtitle">Bureautique</h2>
+                        <div class="skills-row">
+                            <div class="competencecv">
+                                <div class="skill-circle" data-percent="100">
+                                    <div class="skill-circle-inner">
+                                        <span class="skill-percent">100%</span>
+                                    </div>
+                                </div>
+                                <h2 class="font-normal">Suite Google</h2>
+                            </div>
+                            <div class="competencecv">
                                 <div class="skill-circle" data-percent="95">
                                     <div class="skill-circle-inner">
                                         <span class="skill-percent">95%</span>
@@ -363,12 +456,35 @@
                                 <h2 class="font-normal">Excel</h2>
                             </div>
                             <div class="competencecv">
+                                <div class="skill-circle" data-percent="45">
+                                    <div class="skill-circle-inner">
+                                        <span class="skill-percent">45%</span>
+                                    </div>
+                                </div>
+                                <h2 class="font-normal">Google Apps Script</h2>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- Méthodologies -->
+                    <div class="competences-block">
+                        <h2 class="competences-subtitle">Méthodologies</h2>
+                        <div class="skills-row">
+                            <div class="competencecv">
                                 <div class="skill-circle" data-percent="80">
                                     <div class="skill-circle-inner">
                                         <span class="skill-percent">80%</span>
                                     </div>
                                 </div>
-                                <h2 class="font-normal">Jira</h2>
+                                <h2 class="font-normal">Agile / Scrum</h2>
+                            </div>
+                            <div class="competencecv">
+                                <div class="skill-circle" data-percent="50">
+                                    <div class="skill-circle-inner">
+                                        <span class="skill-percent">50%</span>
+                                    </div>
+                                </div>
+                                <h2 class="font-normal">CI/CD</h2>
                             </div>
                         </div>
                     </div>
