--- a/projets.html
+++ b/projets.html
@@ -44,6 +44,47 @@
             <p class="text-page-title"><strong>Projets</strong></p>
         </div>
 
+        <div class="section project-card" id="projetShopCypress">
+            <div class="sectionprojet1">
+                <div class="d-flex">
+                    <div class="size-10x50 gradient-bg-bottom"></div>
+                    <div class="px-20">
+                        <h3>Cypress E-Commerce</h3>
+                        <h2 class="font-normal">Projet Personnel - Novembre 2025</h2>
+                    </div>
+                </div>
+                <p class="p-5-15">
+                    Projet de tests E2E avec Cypress pour tester un site web personnel de e-commerce.
+                </p>
+                <p class="p-5-15">
+                    Tests couvrant le cycle complet : gestion des produits, authentification, panier, commandes et administration.
+                </p>
+                <div class="bonton-container">
+                    <button class="button button-primary button-size-sm open-project-modal"
+                            data-title="Cypress E-Commerce"
+                            data-category="Tests E2E | Projet Personnel"
+                            data-description="Projet de tests E2E avec Cypress pour tester un site web personnel de e-commerce. || Les tests couvrent l'ensemble du parcours utilisateur : création de produits par l'administrateur, inscription et connexion des utilisateurs, ajout au panier, passage de commande, suivi des statuts de commande et gestion des utilisateurs côté admin."
+                            data-tech="Cypress, JavaScript, Node.js"
+                            data-apports="Maîtrise des tests end-to-end avec Cypress ||
+                            Écriture de commandes Cypress personnalisées et réutilisables ||
+                            Automatisation de scénarios de tests complets"
+                            data-github-link="https://github.com/M2M2005/shop-Cypress"
+                            data-youtube-link="https://www.youtube.com/watch?v=2esbW89tLiw"
+                            data-images="
+                            img/button_voir_details/shop-cypress/shop-cypress1.png,
+                            img/button_voir_details/shop-cypress/shop-cypress2.png,
+                            img/button_voir_details/shop-cypress/shop-cypress3.png,
+                            img/button_voir_details/shop-cypress/shop-cypress4.png">
+                        <ion-icon name="information-circle-outline" style="margin-right: 5px;" role="img" class="md hydrated" aria-label="information circle outline"></ion-icon>
+                        <span>Voir Détails</span>
+                    </button>
+                </div>
+            </div>
+            <div class="image-container">
+                <img src="img/button_voir_details/shop-cypress/shop-cypress1.png" alt="shop-Cypress">
+            </div>
+        </div>
+
         <div class="section project-card" id="projetEcommerce">
             <div class="sectionprojet1">
                 <div class="d-flex">
@@ -136,12 +177,15 @@
                 <p class="p-5-15">
                     Le projet consiste à créer un système de référendums sécurisés, permettant à une entreprise de gérer des votes de manière cryptée et confidentielle.
                 </p>
+                <p class="p-5-15">
+                    J'ai également développé une suite de tests automatisés avec TestFX pour valider l'ensemble des parcours utilisateur.
+                </p>
                 <div class="bonton-container">
                     <button class="button button-primary button-size-sm open-project-modal"
                             data-title="Système de Référendums Sécurisés"
                             data-category="Développement d'Application | Universitaire"
-                            data-description="Ce projet s'articulait autour de deux axes majeurs : la cryptographie et la méthode agile. || Nous avons sécuriser les référendums à l'aide de l'algorithme Elgamal. Parallèlement, afin d'assurer une bonne communication avec le client et de répondre au mieux à ses attentes, nous utilisions la méthode agile. Le projet était ainsi organisé en sprints de quatre semaines, et l'équipe se composait d'un Product Owner, d'un Scrum Master et de deux développeurs."
-                            data-tech="Java, Cryptographie, JavaFX"
+                            data-description="Ce projet s'articulait autour de deux axes majeurs : la cryptographie et la méthode agile. || Nous avons sécurisé les référendums à l'aide de l'algorithme Elgamal. Parallèlement, afin d'assurer une bonne communication avec le client et de répondre au mieux à ses attentes, nous utilisions la méthode agile. Le projet était ainsi organisé en sprints de quatre semaines, et l'équipe se composait d'un Product Owner, d'un Scrum Master et de deux développeurs. || J'ai conçu et développé seul une suite complète de tests automatisés avec TestFX. Ces tests simulent les interactions utilisateur sur l'interface JavaFX : connexion client et admin, création et suppression de référendums, parcours de vote complet, et vérification des résultats. Les tests sont paramétrés pour couvrir plusieurs scénarios de vote (Oui/Non/Égalité)."
+                            data-tech="Java, Cryptographie, JavaFX, TestFX"
                             data-github-link="https://github.com/killianrms/Referendum"
                             data-youtube-link="https://www.youtube.com/watch?v=F3I_4daMcuk"
                             data-images="img/button_voir_details/Referendum/referendum1.png,
@@ -152,7 +196,9 @@
                             data-apports="
                             Connexion des applications avec le serveur ||
                             Implémentation des interfaces JavaFX ||
-                            Implémentation de tests automatiques (Voir vidéo)"
+                            Conception et développement seul de tests UI automatisés avec TestFX ||
+                            Automatisation des parcours utilisateur : connexion, vote, gestion admin ||
+                            Tests paramétrés couvrant plusieurs scénarios de vote (Voir vidéo)"
                     >
                         <ion-icon name="information-circle-outline" style="margin-right: 5px;" role="img" class="md hydrated" aria-label="information circle outline"></ion-icon>
                         <span>Voir Détails</span>
