--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <div class="profil">
             <div class="profile-card-shadow">
                 <div class="profil1" >
-                    <img src="img/yprien.webp" alt="Photo de profil" class="imgprofil">
+                    <img src="img/cyprien.webp" alt="Photo de profil" class="imgprofil">
                     <p class="titreprofil2"><Strong>Cyprien<br>Bons</Strong></p>
                     <div class="trait"></div>
                     <p>Étudiant en Informatique</p>
